Add Admin service start stop controls
